[package]
name = "dana_nameserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.5", default-features = false, features = ["http1", "json", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
hickory-client = { version = "0.25.2", features = ["dnssec-ring"] }
silentpayments = "0.4.1"
